# neural-networks

./: .gitignore  LICENSE  README.md  Word2Vec-CBOW.ipynb  autoencoders.ipynb  backpropagation.ipynb  main.py  pyproject.toml  seeds_dataset.csv
AutoEncoders/: autoencoders.ipynb
Backpropagation/: backpropagation.ipynb
Data/: corpus.txt  wine.csv
Word2Vec-CBOW/: Word2Vec-CBOW.ipynb
core/gradient_descent/: GD.py
core/layer/: layer.py
core/loss_functions/: loss.py
core/model/: model.py
helpers/activation_functions/: activation.py
helpers/loss_functions/: loss.py
neuralnetworks/: main.py
neuralnetworks/core/layer/: __init__.py  base.py  layer.py
neuralnetworks/core/model/: __init__.py  base.py  model.py
neuralnetworks/helpers/activation_functions/: __init__.py  activation.py  base.py
neuralnetworks/helpers/loss_functions/: __init__.py  base.py  loss.py
neuralnetworks/helpers/normalize_functions/: __init__.py  base.py  normalizer.py
neuralnetworks/helpers/normalizers/: normalizer.py
neuralnetworks/helpers/optimizers/: optimizer.py
neuralnetworks/helpers/regularisation/: regularization.py
