[tool.poetry]
name = "deep-learning-algorithms"
version = "0.1.0"
description = ""
authors = ["ishan-modi <ishan.modi24@gmail.com>"]
readme = "README.md"
packages = [{ include = "neuralnetworks" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
